# autotools-boilerplates

./: .gitignore  ChangeLog.md  Install.md  README.md
minimal_flat/: .gitignore  Makefile.am  autogen.sh  clean-all.sh  configure.ac
minimal_flat/.deps/: minimal_flat.Po
